--- a/samples/local-toc/local-toc.dita
+++ b/samples/local-toc/local-toc.dita
@@ -4,7 +4,9 @@
 <reference id="topic_t4s_vvs_4t">
   <title>Local Table of Contents</title>
   <refbody>
-		<section xslt-conref="local-toc.xsl"/>
+  	<section>This reference contains:<ul xslt-conref="local-toc.xsl">
+			<li/>
+			</ul></section>
 	</refbody>
 	<reference id="zt3_52l_tt">
 		<title>1st Reference Topic</title>
