--- a/samples/samples.ditamap
+++ b/samples/samples.ditamap
@@ -7,9 +7,11 @@
 	<chapter href="local-toc/local-toc.dita"/>
 	<chapter href="local-toc-specialized/local-toc-specialized.dita"/>
 	<chapter href="local-toc-parameterized/local-toc-parameterized.dita"/>
+	<chapter href="import-xml-to-codeblock/import-xml-to-codeblock.dita"/>
 	<chapter href="import-csv-to-table/import-csv-to-table.dita"/>
 	<chapter href="import-excel-xml-to-table/import-excel-xml-to-table.dita"/>
 	<chapter href="import-cpp-enum/import-cpp-enum.dita"/>
+	<chapter href="import-tdm-entity/import-tdm-entity.dita"/>
 	<chapter href="svg-simple-test/svg-simple-test.dita"/>
 	<chapter href="adding-default-attr/adding-default-attr.dita"/>
 </bookmap>
