--- a/samples/schematron-test/schematron-test.dita
+++ b/samples/schematron-test/schematron-test.dita
@@ -5,20 +5,36 @@
   <title>Topic</title>
   <body>
 		<section>
-			<title>Invalid script url</title>
+			<title>Invalid Script URI</title>
 			<p id="cxz_ng4_5t" xslt-conref="invalid script"/>
 		</section>
 		<section>
-			<title>Invalid script</title>
+			<title>Invalid Script</title>
 			<p id="sw4_zg4_5t" xslt-conref="invalid-script.xsl"/>
 		</section>
 		<section>
-			<title>Invalid input url</title>
+			<title>Invalid XML Source URI</title>
 			<p xslt-conref="valid-script.xsl" id="n3l_rfr_vt" xslt-conref-source="invalid source"/>
 		</section>
 		<section>
-			<title>Valid script</title>
+			<title>Invalid XML Source</title>
+			<p xslt-conref="valid-script.xsl" xslt-conref-source="invalid-xml.xml" id="obh_dbm_yt"/>
+		</section>
+		<section>
+			<title>Runtime Error</title>
+			<p xslt-conref="runtime-error.xsl"/>
+		</section>
+		<section>
+			<title>Valid Script</title>
 			<p id="c3p_bh4_5t" xslt-conref="valid-script.xsl"/>
+		</section>
+		<section>
+			<title>Valid Script with URN</title>
+			<p id="htn_stl_yt" xslt-conref="urn:schematron-test.xsl"/>
+		</section>
+		<section>
+			<title>Valid XML Source with URN</title>
+			<p id="owr_stl_yt" xslt-conref="valid-script.xsl" xslt-conref-source="urn:schematron-test.xml"/>
 		</section>
 	</body>
 </topic>
