--- a/samples/import-cpp-enum/import-cpp-enum.dita
+++ b/samples/import-cpp-enum/import-cpp-enum.dita
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-model href="urn:dita-semia:xslt-conref:schema:xslt-conref-reference.rng" schematypens="http://relaxng.org/ns/structure/1.0"?>
 <?xml-model href="urn:dita-semia:xslt-conref:schema:xslt-conref-reference.rng" schematypens="http://purl.oclc.org/dsdl/schematron"?>
-<reference id="topic_t4s_vvs_4t">
+<reference id="topic_t4s_vvs_4t" xmlns:xcp="http://www.dita-semia.org/xslt-conref/custom-parameter">
   <title>Import C++ Enum</title>
 	<refbody>
 		<section>
 			<title>List of Enumerations</title>
-			<ul id="p4w_cr4_5t" xslt-conref="import-cpp-enum.xsl">
+			<ul id="p4w_cr4_5t" xslt-conref="import-cpp-enum.xsl" xslt-conref-start="ImportCpp"
+				xcp:cppFile="EnumTest.cpp">
 				<li/>
 			</ul>
 		</section>
