--- a/samples/samples.ditamap
+++ b/samples/samples.ditamap
@@ -4,6 +4,7 @@
     <booktitle>
         <mainbooktitle>XSLT-Conref Samples Collection</mainbooktitle>
     </booktitle>
+	<chapter href="section-overview/section-overview.dita"/>
 	<chapter href="local-toc/local-toc.dita"/>
 	<chapter href="local-toc-specialized/local-toc-specialized.dita"/>
 	<chapter href="local-toc-parameterized/local-toc-parameterized.dita"/>
