--- a/samples/adding-default-attr/adding-default-attr.dita
+++ b/samples/adding-default-attr/adding-default-attr.dita
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?xml-model href="urn:dita-semia:xslt-conref:schema:xslt-conref-topic.rng" schematypens="http://relaxng.org/ns/structure/1.0"?>
-<?xml-model href="urn:dita-semia:xslt-conref:schema:xslt-conref-topic.rng" schematypens="http://purl.oclc.org/dsdl/schematron"?>
-<topic id="topic_nzm_qxr_tt">
+<?xml-model href="urn:dita-semia:xslt-conref:schema:xslt-conref-reference.rng" schematypens="http://relaxng.org/ns/structure/1.0"?>
+<?xml-model href="urn:dita-semia:xslt-conref:schema:xslt-conref-reference.rng" schematypens="http://purl.oclc.org/dsdl/schematron"?>
+<reference id="topic_nzm_qxr_tt" xmlns:xcr="http://www.dita-semia.org/xslt-conref">
 	<title>Adding Default Attributes</title>
-	<body>
-		<section xslt-conref="explicitly.xsl"/>
-		<section xslt-conref="by-validation.xsl"/>
-		<section xslt-conref="by-type.xsl"/>
-		<section xslt-conref="by-xsd-schema.xsl"/>
-		<section xslt-conref="by-rng-schema.xsl"/>
-	</body>
-</topic>
+	<refbody>
+		<section xcr:xsl="explicitly.xsl"/>
+		<section xcr:xsl="by-validation.xsl"/>
+		<section xcr:xsl="by-type.xsl"/>
+		<section xcr:xsl="by-xsd-schema.xsl"/>
+		<section xcr:xsl="by-rng-schema.xsl"/>
+	</refbody>
+	<reference id="zqv_xhh_g5">
+		<title>Description</title>
+		<refbody>
+			<section>
+				<p id="k2p_yhh_g5">When resolving an XSLT-Conref it is required that the default
+					attributes – especially the <codeph>class</codeph> attribute – are expanded.
+					This sample demonstrates the various ways how this can be accomplished.</p>
+			</section>
+		</refbody>
+	</reference>
+</reference>
