--- a/samples/svg-simple-test/svg-simple-test.dita
+++ b/samples/svg-simple-test/svg-simple-test.dita
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-model href="urn:dita-semia:xslt-conref:schema:xslt-conref-reference.rng" schematypens="http://relaxng.org/ns/structure/1.0"?>
 <?xml-model href="urn:dita-semia:xslt-conref:schema:xslt-conref-reference.rng" schematypens="http://purl.oclc.org/dsdl/schematron"?>
-<reference id="topic_t4s_vvs_4t">
+<reference id="topic_t4s_vvs_4t" xmlns:xcr="http://www.dita-semia.org/xslt-conref">
   <title>SVG – Simple Test</title>
   <refbody>
 		<section>
-			<fig xslt-conref="svg-simple-test.xsl"/>
+			<fig xcr:xsl="svg-simple-test.xsl"/>
 		</section>
 	</refbody>
+	<reference id="o2f_fmm_f5">
+		<title>Description</title>
+		<refbody>
+			<section>
+				<p id="n5r_fmm_f5">This sample is just to provide some very simple demonstration how
+					to generate any graphical content with XSLT-Conref.</p>
+				<p id="wls_ymm_f5">The properties of the surrounding box are static. The only
+					dynamic content is the text which is taken from the title of the reference. You
+					can see this when changing the title and refreshing the XSLT-Conref – without
+					having to save the file first. The text is simply printed centered with constant
+					text size. No automated line wrapping or scaling is supported, yet.</p>
+			</section>
+		</refbody>
+	</reference>
 </reference>
