--- a/doc/key-map.dita
+++ b/doc/key-map.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?xml-model href="urn:dita-ng:dita:rng:reference.rng" schematypens="http://relaxng.org/ns/structure/1.0"?>
-<?xml-model href="urn:dita-ng:dita:rng:reference.rng" schematypens="http://purl.oclc.org/dsdl/schematron"?>
+<?xml-model href="urn:oasis:names:tc:dita:rng:reference.rng" schematypens="http://relaxng.org/ns/structure/1.0"?>
+<?xml-model href="urn:oasis:names:tc:dita:rng:reference.rng" schematypens="http://purl.oclc.org/dsdl/schematron"?>
 <reference id="wkl_2th_g5">
 	<title>Key Map</title>
 	<refbody>
