--- a/org.dita-semia.resolver/samples/samples.ditamap
+++ b/org.dita-semia.resolver/samples/samples.ditamap
@@ -2,5 +2,10 @@
 <?xml-model href="urn:oasis:names:tc:dita:rng:map.rng" schematypens="http://relaxng.org/ns/structure/1.0"?>
 <map>
 	<title>DITA-SEMIA Samples Collection</title>
-	<topicref href="xslt-conref/xslt-conref.ditamap" format="ditamap"/>
+	<topichead navtitle="XSLT-Conref">
+		<mapref href="xslt-conref/xslt-conref.ditamap"/>
+	</topichead>
+	<topichead navtitle="Conbat">
+		<mapref href="conbat/conbat.ditamap"/>
+	</topichead>
 </map>
