--- a/test/conbat/xref-rng-test.dita
+++ b/test/conbat/xref-rng-test.dita
@@ -8,9 +8,7 @@
 			<sli>Section with attribute title: <xref href="#gh2_vhd_xt/ffv_vjr_zt" format="dita"/></sli>
 			<sli>List item with attribute title: <xref href="#gh2_vhd_xt/smd_snp_zt" format="dita"/></sli>
 			<sli>Topic with attribute title: <xref href="#j5t_pdm_zt" format="dita"/></sli>
-			<sli><draft-comment author="Patrik Stellmann">TODO: implement customized LinkTextResolver in Java
-					to deal with the following scenarios</draft-comment>Topic with empty title and
-				default content: <xref href="#ikj_wnp_zt" format="dita"/>
+			<sli>Topic with empty title and default content: <xref href="#ikj_wnp_zt" format="dita"/>
 			</sli>
 			<sli>Topic with title using a lot inline content: <xref href="#cdg_xjr_zt" format="dita"
 				/></sli>
