Support adding attributes from xslt-conref by xsd: When the root element has no class attriute the content will be reparsed automatically.

--- a/samples/xslt-conref/adding-default-attr/adding-default-attr.dita
+++ b/samples/xslt-conref/adding-default-attr/adding-default-attr.dita
@@ -6,7 +6,7 @@
 	<refbody>
 		<section xcr:xsl="explicitly.xsl"/>
 		<!--<section xcr:xsl="by-validation.xsl"/> not supported bySaxon HE -->
-		<section xcr:xsl="by-type.xsl"/> <!--not supported by Saxon HE--> 
+		<!--<section xcr:xsl="by-type.xsl"/> not supported by Saxon HE--> 
 		<section xcr:xsl="by-xsd-schema.xsl"/>
 		<section xcr:xsl="by-rng-schema.xsl"/>
 	</refbody>
