--- a/test/book-cache/xref-test/xref-test.ditamap
+++ b/test/book-cache/xref-test/xref-test.ditamap
@@ -3,6 +3,7 @@
     xsi:noNamespaceSchemaLocation="urn:oasis:names:tc:dita:xsd:bookmap.xsd">
     <booktitle>
         <mainbooktitle>Topic-Num Test</mainbooktitle>
+    	<booktitlealt>For Demonstration</booktitlealt>
     </booktitle>
 	<frontmatter>
 		<topicref href="frontmatter-topic.dita"/>
@@ -19,10 +20,9 @@
 		<topicref href="chapter-child-topic-1.dita"/>
 		<topicref href="chapter-child-topic-2.dita"/>
 	</chapter>
-	<chapter navtitle="3rd Chapter">
+	<appendix href="appendix-topic-1.dita">
 		<mapref href="submap.ditamap"/>
-	</chapter>
-	<appendix href="appendix-topic-1.dita"/>
+	</appendix>
 	<appendix href="appendix-topic-2.dita">
 		<topicref href="appendix-child-topic-1.dita"/>
 		<topicref href="appendix-child-topic-2.dita"/>
